code/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vscode
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vscode
    spec:
      containers:
        - name: vscode
          image: codercom/code-server:latest
          # securityContext:
          #   runAsUser: 0 # root user
          #   runAsGroup: 0 # root group
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: vscode-config-storage
              mountPath: /home/coder/.config
            - name: vscode-storage
              mountPath: /home/coder/project
            # - name: wordpress-storage
            #   mountPath: /home/coder/project/wordpress
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
      volumes:
        - name: vscode-config-storage
          persistentVolumeClaim:
            claimName: vscode-config-lh-pvc
        - name: vscode-storage
          persistentVolumeClaim:
            claimName: vscode-lh-pvc
        # - name: wordpress-storage
        #   persistentVolumeClaim:
        #     claimName: wordpress-lh-pvc
