code/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: vscode-service
# spec:
#   selector:
#     app: vscode
#   ports:
#     - protocol: TCP
#       port: 8081
#       targetPort: 8081
# ---
apiVersion: v1
kind: Service
metadata:
  name: vscode-service
spec:
  type: NodePort
  selector:
    app: vscode
  ports:
    - protocol: TCP
      port: 8081
      nodePort: 30881
